yaml/01-namespaces.yaml
apiVersion: v1 
kind: Namespace 
metadata:
  name: test 
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
