yaml/09-service-account.yaml
# Bu Service Account'u kullanan Test Podu
apiVersion: v1
kind: Pod
metadata:
  name: api-tester-pod
  namespace: default
spec:
  serviceAccountName: api-reader-sa # Pod'a kimliğini veriyoruz
  containers:
  - name: curl-container
    image: alpine/curl # İçinde curl yüklü gelen hafif bir imaj
    command: ["sleep", "3600"]
