yaml/06-probes-lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: probe-deployment
  namespace: production
spec:
  replicas: 5 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      # Neden kullanıyoruz?: Güncelleme yaparken sistem kesintiye uğramasın diye
      # "Aynı anda en fazla 2 podu kapat/güncelle" kuralını koyuyoruz.
      maxUnavailable: 2 
      maxSurge: 2
  selector:
    matchLabels:
      app: probe-app
  template:
    metadata:
      labels:
        app: probe-app
    spec:
      tolerations:
      - key: "ortam"
        operator: "Equal"
        value: "production"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: ortam
                operator: In
                values:
                - production
      containers:
      - name: app-container
        image: ozgurozturknet/k8s:v1 
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 80
          initialDelaySeconds: 5 # Pod oluştuktan 5 saniye sonra sormaya başla
          periodSeconds: 10 # Her 10 saniyede bir kontrol et
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: probe-lb-service
  namespace: production
spec:
  # Neden LoadBalancer?: Dış dünyadan gelen istekleri alıp, arkadaki sağlıklı ve 
  # "readiness" testini geçmiş 5 pod arasında adil bir şekilde paylaştırmak için.
  type: LoadBalancer 
  selector:
    app: probe-app
  ports:
    - port: 80 # Dışarıdan gelinecek port
      targetPort: 80 # Podun içindeki port
