yaml/05-ingress.yaml
# Ingress'in WordPress podlarına ulaşması için gereken Servis
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80

---
# Test ortamı için Ingress Kuralları
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-wordpress-ingress
  namespace: test
spec:
  ingressClassName: nginx # 4. adımda kurduğumuz nginx controller'ı kullanıyoruz
  rules:
  - host: testblog.example.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service # Yukarıda oluşturduğumuz servise yönlendir
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80

---
# Production ortamı için Ingress Kuralları
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-wordpress-ingress
  namespace: production
spec:
  ingressClassName: nginx
  rules:
  - host: companyblog.example.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
